--- a/css/elixir.css
+++ b/css/elixir.css
@@ -277,9 +277,10 @@ a:hover {text-decoration: none;}
 .logo_elixir {
 	display: inline-block;
 	float: left;
-	width: 110px;
-	height: 50px;
-	background: url("../images/logo_elixir.png") no-repeat;
+	width: 300px;
+	height: 200px;
+	background: url("../images/logo.png") no-repeat;
+	background-size: contain;
 	-webkit-transition: all 0.5s ease;
 	-o-transition: all 0.5s ease;
 	transition: all 0.5s ease;
